syntax = "proto3";
package automation;

service Automation {
  rpc ListDatabases (ListDatabasesRequest) returns (ListDatabasesResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message ListDatabasesRequest {}
message ListDatabasesResponse { repeated string names = 1; }
message GetRequest { string db = 1; string key = 2; }
message GetResponse { bytes value = 1; bool found = 2; }
message PutRequest { string db = 1; string key = 2; bytes value = 3; }
message PutResponse {}
message DeleteRequest { string db = 1; string key = 2; }
message DeleteResponse {}
